plugins {
    id 'java-library'
    id 'datafusion.java-conventions'
    id 'com.diffplug.spotless'
}

// Override the conventions plugin: we need Java 22+ for FFM API
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

// Override the conventions plugin: don't down-compile to Java 8
tasks.withType(JavaCompile).configureEach {
    options.release.set(22)
}

dependencies {
    api 'org.slf4j:slf4j-api:2.0.16'
    api 'org.apache.arrow:arrow-format:18.0.0'
    api 'org.apache.arrow:arrow-vector:18.1.0'
    implementation project(':datafusion-ffi-java')
    implementation 'org.apache.arrow:arrow-c-data:18.1.0'
    runtimeOnly 'org.apache.arrow:arrow-memory-unsafe:18.0.0'
    testImplementation 'org.apache.arrow:arrow-compression:14.0.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.apache.hadoop:hadoop-client:3.4.1'
    testImplementation 'org.apache.hadoop:hadoop-common:3.4.1'
    testImplementation 'org.apache.parquet:parquet-avro:1.13.1'
    testImplementation 'org.apache.parquet:parquet-hadoop:1.15.0'
}

spotless {
    java {
        googleJavaFormat()
    }
}

test {
    dependsOn ':datafusion-ffi-java:copyDevLibrary'
    def ffiLibPath = project(':datafusion-ffi-java').layout.buildDirectory.dir("ffi_libs/dev").get().asFile.path
    jvmArgs += [
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--enable-native-access=ALL-UNNAMED",
        "-Djava.library.path=$ffiLibPath"
    ]
    useJUnitPlatform()
}
